Fix language button images not showing in lobby choice

--- a/TDS_Client/Window/mainNew/src/app/components/lobbychoice/lobby-choice/lobby-choice.component.scss
+++ b/TDS_Client/Window/mainNew/src/app/components/lobbychoice/lobby-choice/lobby-choice.component.scss
@@ -4,11 +4,11 @@
   top: 5px;
 
   #german-button {
-    background: url("/assets/german.png") no-repeat;
+    background: url("/mainNew/assets/german.png") no-repeat;
   }
 
   #english-button {
-    background: url("/assets/english.png") no-repeat;
+    background: url("/mainNew/assets/english.png") no-repeat;
   }
 
   .language-button {
